# rlm-fraud-detection

./: .gitignore  BLOG_SERIES_PLAN.md  CONTRIBUTING.md  FINAL_SETUP_STATUS.md  GETTING_STARTED.md  GITHUB_SETUP_GUIDE.md  LICENSE  PROJECT_STATUS.md  QUICK_START_COMMANDS.md  QUICK_START_STATUS.md  README.md  SETUP_COMPLETE_SUMMARY.md  TEST_REPORT.md  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile.streamlit  demo_rlm_workflow.py  pyproject.toml  requirements-min.txt  requirements.txt  test_all_features.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py  naive_agent.py  rag_agent.py  rlm_agent.py  rlm_agent_old.py
backend/app/api/: analysis.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  data_loader.py  fraud_service.py
backend/app/ui/: streamlit_dashboard.py
blogs/: README.md  blog_template_with_links.md
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  SETUP.md  USAGE.md
scripts/: create_sample_dataset.py  download_dataset.py  quickstart.sh
